MODROLESKC-315: fix missing dummy->real capability in loadable role (#284)